# yahboomcar_ros2_ws

./: .gitignore  .gitmodules  run.sh
KNN/: 01KNN（K近邻算法）识别手写数字确定K值.ipynb  03.txt  2_1.txt  3.txt  6_1.txt  7.txt  8.txt  file2img.py  img2file.py  knn.py  this_is_2.txt  train_3.txt  train_4.txt
KNN/knn-digits/testDigits/: 6_0.txt  8_1.txt  8_x.txt
Pytorch_demo/: pytorch_demo.py  torch_tensor.py
Rosmaster/RobotType/: set_R2L.sh  set_R2_4ROS.sh  set_R2_A1.sh  set_X1_A1.sh  set_X1_x3.sh  set_X3Plus.sh  set_X3_A1.sh  set_X3_S2.sh
Rosmaster/RobotType/bashrc_files/: R2L.bashrc  R2_4ROS.bashrc  R2_a1.bashrc  X1_A1.bashrc  X1_x3.bashrc  X3_a1.bashrc  X3_s2.bashrc  X3plus.bashrc
Rosmaster/auto_drive/: data_collection.py  data_collection_B.py  interactive_regression.ipynb  joystick_R2L.py  road_following.ipynb  road_following.py
Rosmaster/rosmaster/: camera_rosmaster.py  joystick_rosmaster.py  kill_rosmaster.sh  rosmaster_main.py  rosmaster_no_control.py  start_app.sh  wifi_rosmaster.py
Rosmaster/rules/: video.rules  video_pi.rules
TensorFlow_demo/: cats_dogs_demo.py
software/YDLidar-SDK/samples/: gs_test.cpp  sdm_test.cpp  tmini_test.cpp  tof_test.cpp  tri_and_gs_test.cpp  tri_test.cpp
software/YDLidar-SDK/src/: CYdLidar.cpp  CYdLidar.h  GS2LidarDriver.h  SDMLidarDriver.h  YDlidarDriver.h
software/py_install/: setup.py
software/py_install/Rosmaster_Lib/: Rosmaster_Lib.py
software/py_install/Rosmaster_Lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
software/py_install_V0.0.1/py_install/: README.md  setup.py
yahboomcar_ws/src/yahboomcar_slam/: CMakeLists.txt  package.xml
yahboomcar_ws/src/yahboomcar_slam/include/yahboomcar_slam/: point_cloud.h
yahboomcar_ws/src/yahboomcar_slam/launch/: camera_octomap_launch.py  display_octomap_launch.py  display_pcl_launch.py  octomap_server_launch.py  orbslam_base_launch.py  orbslam_pcl_map_launch.py  orbslam_pcl_octomap_launch.py  orbslam_pose_launch.py  orbslam_ros_launch.py
yahboomcar_ws/src/yahboomcar_slam/params/: pointcloud_map.yaml  pointcloud_octomap.yaml
yahboomcar_ws/src/yahboomcar_slam/rviz/: cotomap.rviz  orbslam_pcl.rviz
yahboomcar_ws/src/yahboomcar_slam/src/: point_cloud.cpp  point_cloud_main.cpp
(+173 files in other folders)
